# fun_small_projects

./: FizzFuzz.cpp  README.md
advent_challenge/: CMakeLists.txt
advent_challenge/src/: CMakeLists.txt
advent_challenge/src/advent_1/: advent_1.cpp
advent_challenge/src/advent_2/: advent_2.cpp
advent_challenge/src/advent_3/: advent_3.cpp  advent_3_2.cpp
file_word_counter/: CMakeLists.txt  README.md
file_word_counter/src/: exercise.cpp  exercise_2.cpp  test  word_counter.cpp  word_counter_array.cpp  word_counter_hash.cpp  wordcounter.cpp  wordpair.h
file_word_counter/src/map_structure/: CMakeLists.txt  word_counter_unordmap.cpp  wordcounter.h
file_word_counter/temp/1st_entry/word_counter_challenge/: CMakeLists.txt  word_counter.cpp
file_word_counter/temp/2nd_entry/: moby_dick_novel.txt  word_counter_hash.cpp
task_runner/: .gitignore  CMakeLists.txt  cmdExample.cpp  readme.md
task_runner/include/: task_runner.h
task_runner/src/: CMakeLists.txt  task_runner.cpp
task_runner/tst/: CMakeLists.txt  task_runner_test.cpp
